# OpenHarness

./: .gitignore  AGENTS.examaple.md  AGENTS.md  INSTALL.codex.md  LICENSE  README.md  pyproject.toml
.codex/: INSTALL.md
.codex/skills/openharness/: SKILL.md
.codex/skills/requesting-code-review/: SKILL.md
.codex/skills/subagent-driven-development/: SKILL.md
.project-memory/: aliases.yaml
.project-memory/decisions/: skill_openai_metadata_invocation_policy.yaml  task_package_language_policy_phase_one.yaml
.project-memory/facts/: project_memory_saves_must_run_serially.yaml  project_runtime_helper_addition_protocol.yaml  project_runtime_surface_map_protocol.yaml  runtime_capability_contract_protocol.yaml
openharness_cli/: __init__.py  cli.py  commands.py  constants.py  lifecycle.py  main.py  validation.py
skills/brainstorming/: SKILL.md
skills/dispatching-parallel-agents/: SKILL.md
skills/executing-plans/: SKILL.md
skills/exploring-solution-space/: SKILL.md
skills/finishing-a-development-branch/: SKILL.md
skills/project-memory/: SKILL.md
skills/receiving-code-review/: SKILL.md
skills/requesting-code-review/: SKILL.md
skills/subagent-driven-development/: SKILL.md
skills/systematic-debugging/: CREATION-LOG.md  SKILL.md
skills/test-driven-development/: SKILL.md
skills/using-git-worktrees/: SKILL.md
skills/using-openharness/: SKILL.md
skills/verification-before-completion/: SKILL.md
skills/writing-plans/: SKILL.md
tests/openharness_cases/: __init__.py  common.py  test_cli_workflows.py  test_protocol_docs.py  test_task_package_core.py
(+565 files in other folders)
