[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openharness"
version = "0.1.0"
description = "Agent-first repository scaffold and workflow harness for Codex."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0,<7",
]

[project.scripts]
openharness = "openharness_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[tool.setuptools]
packages = ["openharness_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
